fix: removed leading whitespace and added css spacing

--- a/static/sass/_pattern_cve.scss
+++ b/static/sass/_pattern_cve.scss
@@ -243,6 +243,17 @@
     }
   }
 
+  .cve-score-summary {
+    align-items: center;
+    display: inline-flex;
+    gap: $sph--small;
+  }
+
+  .cve-cvss-version-label,
+  .cve-status-chip {
+    margin-left: $sph--small;
+  }
+
   .cve-table-blur {
     position: relative;
 
